Fixed menu block alignment

--- a/css/menu.css
+++ b/css/menu.css
@@ -37,13 +37,15 @@
 
 .table {
     position: relative;
+    width: 0;
     max-width: 430px;
     padding: 0;
     border-collapse: collapse; /* убирает двойные линии таблицы*/
 }
 
 .table__title {
-    margin-bottom: 68px;
+    margin-bottom: 65px;
+    margin-right: -4px;
     text-align: center;
     font-family: 'Yeseva one';
     font-size: 36px;
@@ -57,9 +59,9 @@
     content: "";
     width: 242px;
     height: 25px;
-    top: 47px;
-    left: 103px;
-    /*background-image: url("/content/images/pattern-mask-white.svg");*/
+    top: 46.5px;
+    left: 92px;
+    background-image: url("../content/images/pattern-mask-gold.svg");
     background-repeat: no-repeat;
 }
 
@@ -80,7 +82,7 @@
 
 .dish-name,
 .dish-price {
-    font-size: 24px;
+    font-size: 23px;
     font-family: "YesevaOne", serif;
     font-weight: 700;
     line-height: 1.143;
@@ -89,12 +91,14 @@
     overflow: hidden;
     white-space: nowrap;
     max-width: 385px;
+    padding-left: 3px;
 }
 
 .dish-name {
     text-align: left;
     width: 375px;
-    letter-spacing: 0.3px;
+    letter-spacing: 0.5px;
+    padding-left: 0px;
 }
 
 .dish-price {
@@ -116,7 +120,7 @@
 }
 
 .table__row--no-action {
-    height: 17px;
+    height: 19px;
 }
 
 .table__no-action {
@@ -139,18 +143,18 @@
 }
 
 .first-special{
-    margin-top: 709px;
-    margin-left: 658px;
+    margin-top: 708px;
+    margin-left: 657.5px;
 }
 
 .second-special{
     margin-top: 609px;
-    margin-left: 1258px;
+    margin-left: 1257px;
 }
 
 .border-row{
     position: absolute;
-    width: 455px;
+    width: 454px;
     height: 80px;
     border: 1px solid #d6bb6e;
 }
